# loupe

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  LICENSE  NOTICE  README.rst  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/_img/: graph_backward.tex  graph_forward.tex  loupe.tex  register.py  shapes.py  zernikes.py
docs/_logo/: logo-dark.tex  logo-light.tex  logo.sh  logo.tex
docs/_static/: loupe.css
docs/_templates/: indexcontent.html
docs/developer/: changes.rst  contributing.rst  index.rst
docs/getting_started/: index.rst  install.rst  overview.rst
docs/user_guide/: array.rst  autograd.rst  extend.rst  functions.rst  index.rst  optimize.rst  patterns.rst  util.rst
loupe/: __init__.py  core.py  cost.py  einsum.py  fourier.py  graph.py  math.py  numeric.py  optimize.py  shape.py  special.py  tensordot.py  util.py  zernike.py
tests/: test_core.py  test_cost.py  test_einsum.py  test_fourier.py  test_optimize.py  test_shape.py  test_special.py  test_tensordot.py  test_util.py  test_zernike.py
tests/math/: test_add.py  test_multiply.py  test_power.py
tests/numeric/: test_add.py  test_exp.py  test_expc.py  test_slice.py  test_subtract.py
