[metadata]
name = loupe
author = Andy Kee
url = https://loupe.readthedocs.io
project_urls =
    Documentation = https://loupe.readthedocs.io
    Code = https://github.com/andykee/loupe
    Issue tracker = https://github.com/andykee/loupe/issues
license = BSD-3-Clause
description = A Python library for solving parametric optimization problems with built-in autograd.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = loupe
include_package_data = true
python_requires = >= 3.6
test_suite = tests
tests_require = pytest
